--- a/index.html
+++ b/index.html
@@ -17,17 +17,29 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a student in the UCLA coding program with a goal of becoming a Full Stack Engineer by the end of 2021.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Houston, Texas</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hiking, camping, biking, staying active (preferably in nature)
+        Cooking, eating, watching television, being horizontal
+        Spending quality time with friends, self-reflection, acting, making people laugh
+        Learning new things, reading, solving all the world's problems in my head</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Being a core contributing member of a team that restores balance to the planet & everyone living on it</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Los Angeles, specifically Topanga Canyon, California</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The current market is dependent on technology & that doesn't seem like it will be changing anytime soon. 
+        
+          At a time when businesses are at the mercy of government-mandated lockdowns, I need to provide a skill that 
+        will not only be a contributing factor towards the success of any established or developing company, but will 
+        also give me job security, allowing me to meet quota from a remote position if necessary.
+        
+          Not only will I have the pleasure of contributing to the sucess of businesses, but I will also have the
+        flexibility to support companies with a shared mission statement. There are so many creative individuals out
+        there aiming to make a difference & I'm eager to collaborate with compassionate & motivated minds in order to
+        leave the world a better place than when we found it.</p>
     </section>
 
     <footer id="footer">
