formatting edit corrections

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>Houston, Texas</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Hiking, camping, biking, staying active (preferably in nature),</p>
+      <p>Hiking, camping, biking, staying active (preferably in nature)</p>
       <p>Cooking, eating, watching television, being horizontal</p>
       <p>Spending quality time with friends, self-reflection, acting, making people laugh</p>
       <p>Learning new things, reading, solving all the world's problems in my head</p>
@@ -30,11 +30,11 @@
       <h1>Where do you live?</h1>
       <p>Los Angeles, specifically Topanga Canyon, California</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>The current market is dependent on technology & that doesn't seem like it will be changing anytime soon. 
+      <p>The current market is dependent on technology & that doesn't seem like it will be changing anytime soon.</p>  
       <p>  </p>
-      <p> At a time when businesses are at the mercy of government-mandated lockdowns, I need to provide a skill that</p> 
+      <p> At a time when businesses are at the mercy of government-mandated lockdowns, I need to provide a skill that
         will not only be a contributing factor towards the success of any established or developing company, but will 
-        also give me job security, allowing me to meet quota from a remote position if necessary.
+        also give me job security, allowing me to meet quota from a remote position if necessary.</p> 
       <p>  </p>
       <p> Not only will I have the pleasure of contributing to the sucess of businesses, but I will also have the
         flexibility to support companies with a shared mission statement. There are so many creative individuals out
