--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
       <h1>Why do you want to be a web developer?</h1>
       <p>The current market is dependent on technology & that doesn't seem like it will be changing anytime soon.</p>  
       <p>  </p>
-      <p> At a time when businesses are at the mercy of government-mandated lockdowns, I need to provide a skill that
-        will not only be a contributing factor towards the success of any established or developing company, but will 
-        also give me job security, allowing me to meet quota from a remote position if necessary.</p> 
+      <p> At a time when businesses are at the mercy of government-mandated lockdowns, I need to provide a skill that will not only be a contributing factor towards the success of any established or developing company, but will also give me job security, allowing me to meet quota from a remote position if necessary.</p> 
       <p>  </p>
       <p> Not only will I have the pleasure of contributing to the sucess of businesses, but I will also have the
         flexibility to support companies with a shared mission statement. There are so many creative individuals out
